package org.example.airports.domain;

public enum AirportStatus {
    OPERATIONAL,
    CLOSED,
    UNDER_MAINTENANCE
}
